# resultlib

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile.am  README.md  clib.json  configure.ac  result.pc.in  sonar-project.properties
.github/workflows/: docs.yml  release.yml  sonar.yml
docs/: Doxyfile  Doxyfile.in  README.md  examples.md  footer.html  license.md  result-library.css
examples/: application.c  deep-dive.html  example.c  pet-store.c  pet-store.h
src/: result.h
tests/: result_debug_file.c  result_debug_func.c  result_debug_line.c  result_failure.c  result_filter_map_using_functions.c  result_filter_map_using_macros.c  result_filter_using_functions.c  result_filter_using_macros.c  result_flat_map_failure_using_functions.c  result_flat_map_failure_using_macros.c  result_flat_map_success_using_functions.c  result_flat_map_success_using_macros.c  result_flat_map_using_functions.c  result_flat_map_using_macros.c  result_get_failure.c  result_get_success.c  result_has_failure.c  result_has_success.c  result_if_failure_using_functions.c  result_if_failure_using_macros.c  result_if_success_or_else_using_functions.c  result_if_success_or_else_using_macros.c  result_if_success_using_functions.c  result_if_success_using_macros.c  result_map_failure_using_functions.c  result_map_failure_using_macros.c  result_map_success_using_functions.c  result_map_success_using_macros.c  result_map_using_functions.c  result_map_using_macros.c  result_or_else.c  result_or_else_map_using_functions.c  result_or_else_map_using_macros.c  result_recover_map_using_functions.c  result_recover_map_using_macros.c  result_recover_using_functions.c  result_recover_using_macros.c  result_success.c  result_use_failure.c  result_use_success.c  (+1 more)
